--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-	<img src="images/foto.jpg" alt="Eliška Veselá">
+	
 
 	<div class="box">
 
@@ -21,8 +21,10 @@
 
 		<p>I přes velké pracovní nasazení si každý den najde čas na svou dceru a dva psy. Ráda jezdí na koni, plave a chodí po horách. Její vysněná dovolená je strávit půl roku v kanadské divočině.</p>
 
-		<a href="https://twitter.com/">Twitter</a>
-		<a href="https://www.facebook.com/">Facebook</a>
+		<a href="https://twitter.com/" class="twitter">Twitter</a>
+		<a href="https://www.facebook.com/" class="facebook">Facebook</a>
+
+		<img src="images/foto.jpg" alt="Eliška Veselá">
 
 	</div>
 
